# andret13pinto_who-reviews

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  action.yml  pyproject.toml  squads.example.yml
src/pr_review_action/: config.py  github_client.py  main.py  ownership.py  reviewer_selector.py
src/pr_review_action/strategies/: __init__.py  base.py  least_recent.py  random_strategy.py  round_robin.py
src/who_reviews/: config.py  github_client.py  http_retry.py  main.py  ownership.py  reviewer_selector.py
src/who_reviews/strategies/: __init__.py  least_recent.py  random_strategy.py  round_robin.py
tests/: conftest.py  test_config.py  test_http_retry.py  test_integration.py  test_ownership.py  test_reviewer_selector.py  test_strategies.py
